--- a/mobileapp/public/extensions/css/mobileapp.less
+++ b/mobileapp/public/extensions/css/mobileapp.less
@@ -1,8 +1,8 @@
 /****************************************
  FileStructure of mobileapp.less (v1.0)
 *****************************************/
-/*will be merged into one file when deploying to live system*/
-/*path needs to be prefixed with /../public/extensions/css/ to work for express.compiler*/
+//will be merged into one file when deploying to live system
+//path needs to be prefixed with /../public/extensions/css/ to work for express.compiler
 
 @import "vars";
 @import "basic";
