--- a/league/templates/index.html
+++ b/league/templates/index.html
@@ -13,6 +13,11 @@
 
   <link rel="shortcut icon" href="images/favicons/fi_standard.ico" type="image/x-icon" />
   <link rel="apple-touch-icon" href="images/favicons/fi_apple_touch.png" />
+
+  <link rel="apple-touch-startup-image" href="images/startup/ipad_landscape.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
+  <link rel="apple-touch-startup-image" href="images/startup/ipad_portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
+  <link rel="apple-touch-startup-image" href="images/startup/iphone_portrait.png" media="screen and (max-device-width: 320px)" />
+
 {{#production}}
   <link rel="stylesheet" type="text/css" href="{{#cdn}}{{cdn}}/{{rev}}/league/{{/cdn}}extensions/css/league-min-base64.css" media="screen,projection,print" />
 {{/production}}
@@ -47,7 +52,7 @@
     df = (function(df) {
       df.config = {{{config}}};
       return df;
-    })(typeof df === "undefined" ? {} : df); 
+    })(typeof df === "undefined" ? {} : df);
   </script>
 
 {{#production}}
