renamed iphone startup image

--- a/league/templates/index.html
+++ b/league/templates/index.html
@@ -16,7 +16,7 @@
 
   <link rel="apple-touch-startup-image" href="images/startup/ipad_landscape.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
   <link rel="apple-touch-startup-image" href="images/startup/ipad_portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
-  <link rel="apple-touch-startup-image" href="images/startup/iphone_portrait.png" media="screen and (max-device-width: 320px)" />
+  <link rel="apple-touch-startup-image" href="images/startup/iphone.png" media="screen and (max-device-width: 320px)" />
 
 {{#production}}
   <link rel="stylesheet" type="text/css" href="{{#cdn}}{{cdn}}/{{rev}}/league/{{/cdn}}extensions/css/league-min-base64.css" media="screen,projection,print" />
