--- a/league/extensions/css/vars.less
+++ b/league/extensions/css/vars.less
@@ -70,6 +70,16 @@
         -ms-animation:@animation;
         animation:@animation;
 	}
+	
+	.header(){
+        -webkit-transform: translate3d(0,0,0);
+        -webkit-animation:acceleratedReveal 1s forwards;
+        -moz-animation:acceleratedReveal 1s forwards;
+        -o-animation:acceleratedReveal 1s forwards;
+        -ms-animation:acceleratedReveal 1s forwards;
+        animation:acceleratedReveal 1s forwards;
+	}
+
 }
 
 // transform ------------------------------------------------------------------
