some changes to make app work on raspberry together with league-app updated some function-calls to newer library versions moved locales to "real" json objects fixed default) with *) in startup.bash and looking for node using "which" fixed a typo in view and locales

--- a/mobileapp/views/index.html
+++ b/mobileapp/views/index.html
@@ -61,7 +61,7 @@
 					</div>
 				</fieldset>
                 <div class="buttonbar">
-                    <input type="submit" class="button" value="{{locales.login.botton.go}}" />
+                    <input type="submit" class="button" value="{{locales.login.button.go}}" />
                 </div>
 			</form>
 		</section>
